GEODE-1143: Adding GC settings for DUnit JVM settings